# LAM-mcp

./: .gitignore  AUTOMATION_SETUP.md  BEFORE_AFTER_COMPARISON.md  CLAUDE_DESKTOP_FIX.md  QUICK_REFERENCE.md  RAG_QUICK_REFERENCE.md  RAG_USAGE_GUIDE.md  README.md  SESSION_CONTEXT_GUIDE.md  SESSION_CONTEXT_SUMMARY.md  USAGE.md  VS_CODE_MCP_GUIDE.md  fix_claude_config.ps1  get_page_source_script.py  page_source_docs_20251012_145425.html  page_source_extractor.py  page_source_soundcloud_20251012_152003.html  pyproject.toml  setup.py  start_server.bat  test_page_source.py  test_rag.py  test_session_context.py
.github/: copilot-instructions.md
browser_mcp_server/: __init__.py  __main__.py  browser_utils.py  config.py  rag_engine.py  server.py
examples/: .env.template  QUICKSTART.md  README.md  claude_desktop_config.json  claude_desktop_config_fixed.json  test_setup.py  test_vscode_mcp.py  usage_examples.md
future work/: Coding-Assistant-Prompt.md  RAG-Integration-Guide.md
tests/: test_browser_server.py
