[project]
name = "browser-automation-mcp"
version = "1.0.0"
description = "MCP server for browser automation using Selenium WebDriver"
authors = [
    {name = "Mohammad Abdul Gafoor", email = "thedeveloper.gg@gmail.com"}
]
dependencies = [
    "mcp>=1.2.0",
    "selenium>=4.15.0",
    "webdriver-manager>=4.0.0",
    "pillow>=10.0.0",
    "beautifulsoup4>=4.12.0",
    "click>=8.1.0",
    "anyio>=4.0.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
browser-mcp-server = "browser_mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["browser_mcp_server"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
]
